<resources>
    <string name="app_name">BookListApp</string>
    <string name="mine">我的</string>
    <string name="game">游戏</string>
    <string name="classify">分类</string>
    <string name="bookList">书架</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pre_input">请输入书名：</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="pre_inputTag">请选择标签：</string>
    <string name="bookName">书名</string>
    <string name="tag">标签</string>
    <string name="author">作者</string>
    <string name="science">科技</string>
    <string name="history">历史</string>
    <string name="culture">人文</string>
    <string name="other">其他</string>
    <string name="pre_input_author">请输入作者：</string>
    <string name="like">喜欢</string>
    <string name="start">开始</string>
    <string name="score">最高分：</string>

    <string-array name="spinner_data">
        <item>其他</item>
        <item>科技</item>
        <item>历史</item>
        <item>人文</item>
    </string-array>

</resources>