<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/book"
            android:gravity="center"
            android:text="@string/bookList"
            android:background="@null"
            android:button="@null"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/classify"
            android:gravity="center"
            android:text="@string/classify"
            android:background="@null"
            android:button="@null"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/game"
            android:gravity="center"
            android:text="@string/game"
            android:background="@null"
            android:button="@null"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/mine"
            android:gravity="center"
            android:text="@string/mine"
            android:background="@null"
            android:button="@null"
            android:textSize="18sp" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>