<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_detail">

    <ImageView
        android:id="@+id/imageView_detail"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/book_1" />

    <TextView
        android:id="@+id/textView_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/bookName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toEndOf="@+id/imageView_detail"
        app:layout_constraintTop_toTopOf="@+id/imageView_detail" />

    <TextView
        android:id="@+id/textView_detail_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tag"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView_detail_author"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_author" />

    <TextView
        android:id="@+id/textView_detail_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/author"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_name" />

    <ImageButton
        android:id="@+id/imageButton_like"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/like"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="@+id/textView_detail_tag"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_tag"
        app:srcCompat="@drawable/like"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <ImageButton
        android:id="@+id/imageButton_dislike"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/like"
        android:scaleType="centerInside"
        android:background="@null"
        app:layout_constraintStart_toStartOf="@+id/textView_detail_tag"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_tag"
        app:srcCompat="@drawable/dislike" />

</androidx.constraintlayout.widget.ConstraintLayout>