<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_add">

    <TextView
        android:id="@+id/textView2_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/pre_input"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2_input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/pre_inputTag"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2_input"
        app:layout_constraintTop_toBottomOf="@+id/textView2_input" />

    <TextView
        android:id="@+id/textView2_input3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/pre_input_author"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_input2" />

    <EditText
        android:id="@+id/editText2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/pre_input"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toEndOf="@+id/textView2_input"
        app:layout_constraintTop_toTopOf="@+id/textView2_input" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:entries="@array/spinner_data"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2_input2"
        app:layout_constraintStart_toEndOf="@+id/textView2_input2"
        app:layout_constraintTop_toTopOf="@+id/textView2_input2"
        app:layout_constraintVertical_bias="0.476" />

    <EditText
        android:id="@+id/editText_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/pre_input_author"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2_input3"
        app:layout_constraintStart_toEndOf="@+id/textView2_input3"
        app:layout_constraintTop_toTopOf="@+id/textView2_input3"
        app:layout_constraintVertical_bias="0.476" />

    <Button
        android:id="@+id/button2_yes_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="180dp"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2_no_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2_yes_id" />

</androidx.constraintlayout.widget.ConstraintLayout>