<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentClassify">


    <ImageButton
        android:id="@+id/imageButton_science"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/science"
        android:scaleType="centerInside"
        android:src="@drawable/science"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton_history"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/history"
        android:scaleType="centerInside"
        android:src="@drawable/history"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton_science"
        app:layout_constraintStart_toEndOf="@+id/imageButton_science"
        app:layout_constraintTop_toTopOf="@+id/imageButton_science" />

    <ImageButton
        android:id="@+id/imageButton_culture"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/culture"
        android:scaleType="centerInside"
        android:src="@drawable/culture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_science" />

    <ImageButton
        android:id="@+id/imageButton_other"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/other"
        android:scaleType="centerInside"
        android:src="@drawable/other"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton_culture"
        app:layout_constraintStart_toEndOf="@+id/imageButton_culture"
        app:layout_constraintTop_toTopOf="@+id/imageButton_culture"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="30sp"
        android:textColor="@color/gray"
        android:text="@string/science"
        app:layout_constraintStart_toStartOf="@+id/imageButton_science"
        app:layout_constraintTop_toTopOf="@+id/imageButton_science" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/history"
        android:textColor="@color/gray"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageButton_science"
        app:layout_constraintTop_toTopOf="@+id/imageButton_history" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="30sp"
        android:textColor="@color/gray"
        android:text="@string/culture"
        app:layout_constraintStart_toStartOf="@+id/imageButton_culture"
        app:layout_constraintTop_toTopOf="@+id/imageButton_culture" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/other"
        android:textColor="@color/gray"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageButton_culture"
        app:layout_constraintTop_toTopOf="@+id/imageButton_other" />
</androidx.constraintlayout.widget.ConstraintLayout>